--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -3,5 +3,5 @@
   <%= f.input :address %>
   <%= f.input :phone_number %>
   <%= f.input :category %>
-  <%= f.submit "add a resto", class: "btn btn-primary" %>
+  <%= f.submit "edit resto", class: "btn btn-primary" %>
 <% end %>
